tests/data/invalid_dtds/parameter_entities_external_4/test.dtd
<!ENTITY % external4 PUBLIC "foo" bad>
